# cresidential

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py  store.py
backend/app/routers/: jobs.py  plaid.py  transactions.py
backend/app/services/: detection_service.py  pipeline.py  plaid_service.py
backend/tests/: fixtures.py  test_detection_service.py
docs/: ARCHITECTURE.md  CURRENT_BLOCKER.md  IMPLEMENTATION.md  MVP.md  PRODUCT.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Analyzing.tsx  CandidateList.tsx  ConnectBank.tsx
