[tool.poetry]
name = "cresidential-api"
version = "0.1.0"
description = "Rental Verification API"
authors = ["James Ballanger <jameswballanger@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
plaid-python = "*"
python-dotenv = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
